--- a/learning_users/templates/basic_app/base.html
+++ b/learning_users/templates/basic_app/base.html
@@ -17,6 +17,8 @@
                 {% else %}
                 <li><a class="navbar-link" href="{% url 'basic_app:user_login' %}">Login</a></li>
                 {% endif %}
+
+                <li><a class="navbar-link" href="{% url 'basic_app:micropost' %}">MicroPost</a></li>
             </ul>
         </div>
     </nav>
