--- a/learning_users/templates/basic_app/index.html
+++ b/learning_users/templates/basic_app/index.html
@@ -2,7 +2,7 @@
 {% block body_block %}
 
 <div class="jumbotron">
-    <h1>Django Level Five</h1>
+    <h1>Kashiwagi's Django Project</h1>
 </div>
 
 {% endblock %}
