--- a/learning_users/templates/basic_app/registration.html
+++ b/learning_users/templates/basic_app/registration.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             {{ user_form.as_p }}
             {{ profile_form.as_p }}
-            <input type="submit" name="" value="Register">
+            <input type="submit" name="" value="MicroPost">
         </form>
     {% endif %}
 </div>
